updated many features such as button logic and fixed the infinite loop bug. Persisting issues include the spacing between components on a vertical view after adding mulitple peers to the app, more appealing UX, and eventually the need for a server to save user friend information to make the app actually usable for everyday consumers

--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,59 @@
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
+.disabled {
+  background-color: rgb(229, 198, 145);
+  cursor: not-allowed;
+}
+/* //////////// */
+/* ERROR MODAL */
+/* //////////// */
 
-.peer-container, .bill-total-container {
+.error-modal {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  height: 25vh;
+  width: 50vh;
+  z-index: 10;
+  border-radius: 4px;
+  background-color: whitesmoke;
+  -webkit-box-shadow: 0px 0px 300px 2000px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0px 0px 300px 2000px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 0px 300px 2000px rgba(0, 0, 0, 0.4);
+}
+
+.error-modal div {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.error-modal span:last-child {
+  font-size: 2rem;
+  position: absolute;
+  right: 0;
+}
+
+.error-modal h1 {
+}
+
+.error-modal p {
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+/* //////////// */
+/* ERROR MODAL */
+/* //////////// */
+
+.peer-container,
+.bill-total-container {
   height: 30vh;
- 
+
   /* change this back for production. I have this hear for smaller view */
   /* width: 33% */
   width: 50%;
@@ -22,10 +68,9 @@
   display: flex;
   flex-direction: column;
   /* change this back for production. I have this hear for smaller view */
-/* was margin: 0 2rem */
+  /* was margin: 0 2rem */
   margin: 10rem;
   /* change this back for production. I have this hear for smaller view */
-
 }
 
 .peer-container {
@@ -33,10 +78,12 @@
 }
 
 .bill-total-container {
-  padding: 1rem 2rem;  border-radius: 4px;
+  padding: 1rem 2rem;
+  border-radius: 4px;
 }
 #close-btn {
   width: 8rem;
-  padding: .5rem;
- 
+  padding: 0.5rem;
 }
+
+
